accounting - na razie nie dziala

--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -28,6 +28,12 @@ users:
         password:   secret
         isAdmin:    true
 
+    - !!models.User
+           email:      portalUser@sample.com
+           name:       Portal User
+           password:   secret
+           isAdmin:    false
+
 # Apps
 apps:
 
